--- a/423A Group Project Code.qmd
+++ b/423A Group Project Code.qmd
@@ -667,6 +667,8 @@ all_data <- filter(housing_built, year > 2009) |>
 all_data
 ```
 
+# Determining Gentrification
+
 ```{r unrestricted_model}
 unrestrict_model <- all_data |> 
   mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
@@ -678,7 +680,7 @@ unrestrict_model <- all_data |>
 ```
 
 ```{r restricted_model}
-restrict_model <- all_data |> 
+all_data_gentrify <- all_data |> 
   mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
          value_delta = value_median_dollars - lag(value_median_dollars), 
          edu_level_delta = percent_educational_attainment_graduate_or_professional_degree - lag(percent_educational_attainment_graduate_or_professional_degree), 
@@ -689,14 +691,14 @@ restrict_model <- all_data |>
 ```
 
 ```{r verify-gentrification-NEW}
-restrict_model |> 
+all_data_gentrify |> 
   filter(year != 2010) |> 
   ggplot(aes(x = gentrifying, 
              y = total_enrollment)) + 
   geom_boxplot()
 
 #PIVOTS SECTIONS TO GROUP VARIABLES
-restrict_model |> 
+all_data_gentrify |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains('enrollment') & !starts_with('grade') & !starts_with('kinder') & !starts_with('total'), 
                names_to = 'enrollment_group', 
@@ -708,7 +710,7 @@ restrict_model |>
   geom_boxplot(aes(fill = gentrifying)) +
   coord_flip()
 
-restrict_model |> 
+all_data_gentrify |> 
   filter(year != 2010) |>  
   pivot_longer(cols = contains('enrollment') & !starts_with('total') & (starts_with('grade') | starts_with('kinder')), 
                names_to = 'enrollment_group', 
@@ -720,7 +722,7 @@ restrict_model |>
   geom_boxplot(aes(fill = gentrifying)) +
   coord_flip()
 
-restrict_model |> 
+all_data_gentrify |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains("graduation"), 
                names_to = 'grad_rate_timeframe', 
@@ -729,7 +731,7 @@ restrict_model |>
              y = grad_rate)) + 
   geom_boxplot(aes(fill = gentrifying))
 
-restrict_model |> 
+all_data_gentrify |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains("dropout"), 
                names_to = 'dropout_rate_timeframe', 
@@ -738,7 +740,7 @@ restrict_model |>
              y = dropout_rate)) + 
   geom_boxplot(aes(fill = gentrifying))
 
-restrict_model |> 
+all_data_gentrify |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains('ready'), 
                names_to = 'subject_readiness', 
@@ -749,29 +751,15 @@ restrict_model |>
   coord_flip()
 ```
 
-```{r verify-gentrification-OLD}
-#--------------------------------------------------------------------------------------------------------
-#THIS SETUP FOR GENTRIFYING GIVES LATER YEARS AS GENTRIFYING. TESTING SOME VIZ
-acs_nces_data |> 
-  mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
-         value_delta = value_median_dollars - lag(value_median_dollars), 
-         edu_level_delta = percent_educational_attainment_graduate_or_professional_degree - lag(percent_educational_attainment_graduate_or_professional_degree)) |> 
-
-  mutate(gentrifying = if_else((rent_delta > 0 | value_delta > 0) & edu_level_delta > 0.2, TRUE, FALSE)) |> 
-  select(year, rent_delta, value_delta, edu_level_delta, gentrifying, everything()) |> 
+```{r}
+unrestrict_model |> 
   filter(year != 2010) |> 
   ggplot(aes(x = gentrifying, 
              y = total_enrollment)) + 
   geom_boxplot()
 
 #PIVOTS SECTIONS TO GROUP VARIABLES
-acs_nces_data |> 
-  mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
-         value_delta = value_median_dollars - lag(value_median_dollars), 
-         edu_level_delta = percent_educational_attainment_graduate_or_professional_degree - lag(percent_educational_attainment_graduate_or_professional_degree)) |> 
-
-  mutate(gentrifying = if_else((rent_delta > 0 | value_delta > 0) & edu_level_delta > 0.2, TRUE, FALSE)) |> 
-  select(year, rent_delta, value_delta, edu_level_delta, gentrifying, everything()) |> 
+unrestrict_model |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains('enrollment') & !starts_with('grade') & !starts_with('kinder') & !starts_with('total'), 
                names_to = 'enrollment_group', 
@@ -783,14 +771,8 @@ acs_nces_data |>
   geom_boxplot(aes(fill = gentrifying)) +
   coord_flip()
 
-acs_nces_data |> 
-  mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
-         value_delta = value_median_dollars - lag(value_median_dollars), 
-         edu_level_delta = percent_educational_attainment_graduate_or_professional_degree - lag(percent_educational_attainment_graduate_or_professional_degree)) |> 
-
-  mutate(gentrifying = if_else((rent_delta > 0 | value_delta > 0) & edu_level_delta > 0.2, TRUE, FALSE)) |> 
-  select(year, rent_delta, value_delta, edu_level_delta, gentrifying, everything()) |> 
-  filter(year != 2010) |> 
+unrestrict_model |> 
+  filter(year != 2010) |>  
   pivot_longer(cols = contains('enrollment') & !starts_with('total') & (starts_with('grade') | starts_with('kinder')), 
                names_to = 'enrollment_group', 
                values_to = 'enrollment_number') |> 
@@ -801,13 +783,7 @@ acs_nces_data |>
   geom_boxplot(aes(fill = gentrifying)) +
   coord_flip()
 
-acs_nces_data |> 
-  mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
-         value_delta = value_median_dollars - lag(value_median_dollars), 
-         edu_level_delta = percent_educational_attainment_graduate_or_professional_degree - lag(percent_educational_attainment_graduate_or_professional_degree)) |> 
-
-  mutate(gentrifying = if_else((rent_delta > 0 | value_delta > 0) & edu_level_delta > 0.2, TRUE, FALSE)) |> 
-  select(year, rent_delta, value_delta, edu_level_delta, gentrifying, everything()) |> 
+unrestrict_model |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains("graduation"), 
                names_to = 'grad_rate_timeframe', 
@@ -816,13 +792,7 @@ acs_nces_data |>
              y = grad_rate)) + 
   geom_boxplot(aes(fill = gentrifying))
 
-acs_nces_data |> 
-  mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
-         value_delta = value_median_dollars - lag(value_median_dollars), 
-         edu_level_delta = percent_educational_attainment_graduate_or_professional_degree - lag(percent_educational_attainment_graduate_or_professional_degree)) |> 
-
-  mutate(gentrifying = if_else((rent_delta > 0 | value_delta > 0) & edu_level_delta > 0.2, TRUE, FALSE)) |> 
-  select(year, rent_delta, value_delta, edu_level_delta, gentrifying, everything()) |> 
+unrestrict_model |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains("dropout"), 
                names_to = 'dropout_rate_timeframe', 
@@ -831,13 +801,7 @@ acs_nces_data |>
              y = dropout_rate)) + 
   geom_boxplot(aes(fill = gentrifying))
 
-acs_nces_data |> 
-  mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
-         value_delta = value_median_dollars - lag(value_median_dollars), 
-         edu_level_delta = percent_educational_attainment_graduate_or_professional_degree - lag(percent_educational_attainment_graduate_or_professional_degree)) |> 
-
-  mutate(gentrifying = if_else((rent_delta > 0 | value_delta > 0) & edu_level_delta > 0.2, TRUE, FALSE)) |> 
-  select(year, rent_delta, value_delta, edu_level_delta, gentrifying, everything()) |> 
+unrestrict_model |> 
   filter(year != 2010) |> 
   pivot_longer(cols = contains('ready'), 
                names_to = 'subject_readiness', 
@@ -846,8 +810,9 @@ acs_nces_data |>
              y = pct_ready)) + 
   geom_boxplot(aes(fill = gentrifying)) +
   coord_flip()
+```
 
-
+```{r verify-gentrification-OLD}
 #WANT TO HAVE A LINE GRAPH OVER YEAR WITH DIFFERENT LINES FOR ENROLLMENT WITH BACKGROUND COLOR SHADING FOR WHEN A YEAR COUNTS AS BEING GENTRIFIED
 acs_nces_data |> 
   mutate(rent_delta = gross_rent_median_dollars - lag(gross_rent_median_dollars), 
